# cpma.live

./: .gitignore  Makefile  README.md
deploy/: certbot-renew-hook.sh  q3proxy.service  q3server-duel.service  q3server-movement.service  q3server.service
deploy/servers/arena/: server.cfg
deploy/servers/duel/: server.cfg
deploy/servers/duel/cfg-maps/: 1v1maps.txt
deploy/servers/duel/modes/: duel.cfg
deploy/servers/movement/: server.cfg
deploy/servers/movement/cfg-maps/: camaps.txt
deploy/servers/movement/modes/: movement.cfg
master-cf/: package-lock.json  package.json  wrangler.toml
master-cf/plans/: dazzling-shimmying-ocean.md
master-cf/src/: index.ts
plans/: dazzling-shimmying-ocean.md  steady-munching-wreath.md
proxy/: Cargo.toml  package-lock.json  proxy.test.js
proxy/src/: main.rs
proxy/tests-rs/: Cargo.toml
proxy/tests-rs/src/: lib.rs
proxy/tests-rs/tests/common/: mod.rs
scripts/: download-assets.sh  r2-cors.json  upload-assets-r2.sh
server/: Dockerfile  entrypoint.sh
server/cpma/: server.cfg
server/cpma/modes/: CACTF.cfg  NSDFFA.cfg  OKIDOKI.cfg  PUBCA.cfg  PUBCTFS.cfg
website/: .env  .env.production  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
website/src/: env.ts
website/src/components/: footer.tsx  header.tsx  hero.tsx  join-server-button.tsx  player-config.tsx  server-picker.tsx
website/src/game/: index.ts
website/src/hooks/: use-fullscreen.ts
website/src/lib/: fs.ts  q3.ts
website/src/pages/: GamePage.tsx  HomePage.tsx
website/src/routes/: game.tsx
