[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "sync", "time", "io-util"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-rustls = { version = "0.26", features = ["ring"] }
rustls-pemfile = "2"
